erDiagram
    Branch ||--o{ Home : "Each home belongs to a branch of the organization"
    Home ||--o{ User : "Each user is associated with one rehab-home"
    User }o--|| AccessLevel : "Each user has an access level"
    AccessLevel ||--o{ Capability : "Access level grants a set of capabilities"
    Home |o--o{ Patient : "Each patient has an optional current-home (null for former patients)"
    Patient ||--o{ Event : "Each patient has a list of events"
    User }o--o{ FeatureFlag : "Feature flags are set per-user"
    User ||--o{ Session : "Each user has a set of browser sessions"
    Event }o--|| Home : "Each event stores the current home of the patient at the time"
    Event }o--|| User : "Each event stores the user that generated the event"
